[package]
name = "sled-migrate"
version = "0.1.0"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled_0_23 = { version = "0.23", package = "sled" }
sled_0_24 = { version = "0.24", package = "sled" }
sled_0_25 = { version = "0.25", package = "sled" }
sled_0_28 = { version = "0.28", package = "sled" }
sled_0_29 = { version = "0.29", package = "sled" }
sled_0_30 = { version = "0.30", package = "sled" }
sled_0_31 = { version = "0.31", package = "sled" }
sled_0_32 = { version = "0.32", package = "sled" }
sled_0_33 = { version = "0.33", package = "sled" }
sled_0_34 = { version = "0.34", package = "sled" }
clap = "4.0.26"
crc32fast = "1.3.2"
fs2 = "0.4.3"
once_cell = "1.17.0"

[dev-dependencies]
trycmd = "0.14.10"
